--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,25 @@
 akka {
+  system.name = "fasttack-scheduler"
+
   loglevel = DEBUG
-  system.name = "scheduler-example"
+
+  actor {
+    default-dispatcher {
+      # This will be used if you have set "executor = "fork-join-executor""
+      fork-join-executor {
+        # Min number of threads to cap factor-based parallelism number to
+        parallelism-min = 2
+
+        # The parallelism factor is used to determine thread pool size using the
+        # following formula: ceil(available processors * factor). Resulting size
+        # is then bounded by the parallelism-min and parallelism-max values.
+        parallelism-factor = 1.0
+
+        # Max number of threads to cap factor-based parallelism number to
+        parallelism-max = 8
+      }
+    }
+  }
 }
 
 db {
@@ -17,14 +36,48 @@ db {
         password = "postgres"
       }
     }
+    slick-postgres {
+      profile = "slick.jdbc.PostgresProfile$"
+      db {
+        dataSourceClass = "slick.jdbc.DriverDataSource"
+        properties = {
+          driver = "org.postgresql.Driver"
+          url = "jdbc:postgresql://127.0.0.1/postgres"
+          user = "postgres"
+          password = "postgres"
+        }
+      }
+    }
+  }
+  remote {
+    postgre {
+      connectionPool = "HikariCP"
+      dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+      numThreads = 10
+      properties = {
+        serverName = "192.168.1.115"
+        portNumber = "5432"
+        databaseName = "ft_al"
+        user = "ft"
+        password = "ft"
+      }
+    }
   }
 }
 
 application {
   host = 0.0.0.0
-  port = 8082
+  port = 8080
 }
 
-scheduler-expression {
-  every-5-sec = "*/5 * * ? * *"
+scheduler {
+  expression {
+    every-5-sec = "*/5 * * ? * *" // каждые 5-секунд
+    every-3-sec = "*/3 * * ? * *" // каждые 3-секунд
+    every-2-sec = "*/2 * * ? * *" // каждые 2-секунд
+    every-sec = "* * * ? * *"     // каждую секунду
+  }
+  save-as = "seqSchedulerTask"
+  max-per-task = 100
+  take-num-task = 2
 }
